# AnsimLectureExamples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Example1_CPU/: CMakeLists.txt  main.cpp
Example2_CUDA/: CMakeLists.txt  main.cu
Example3_CUDA_SharedMemory/: CMakeLists.txt  main.cu
particleRenderer/: ParticleRenderer.cpp  ParticleRenderer.h
